<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="about_feed_back">Feedback</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_rate_gp">Rate us at Google Play</string>
    <string name="about_terms">Terms of Use</string>
    <string name="accessibility_permission_desc">Tap on the top right toggle to enable Powerful Booster</string>
    <string name="accessibility_permission_desc1">Enable to use functions such as:</string>
    <string name="accessibility_permission_desc2">1.Clean phone junk thoroughly</string>
    <string name="accessibility_permission_desc3">2.Boost your phone performance</string>
    <string name="accessibility_permission_desc4">3.Cool down your CPU</string>
    <string name="accessibility_permission_desc5">4.Extend battery life</string>
    <string name="accessibility_permission_desc6">You may receive privacy warnings when enabling. We assure you that this is a standard procedure on all Android phones, your personal data will NOT be compromised by allowing this access.</string>
    <string name="accessibility_permission_dialog_desc">Permission is required to clean further. Please continue to authorize.</string>
    <string name="accessibility_permission_dialog_no">Later</string>
    <string name="accessibility_permission_dialog_title">Junk files remain!</string>
    <string name="accessibility_permission_dialog_yes">CONTINUE</string>
    <string name="add_ignore_list">Add to Ignore List</string>
    <string name="add_ignore_list_tip">Ignore list for memory boost</string>
    <string name="add_qc_dialog_desc">Create a 1 Tap Boost shortcut to speed up your device easily</string>
    <string name="add_qc_dialog_title">Enable 1 Tap Boost</string>
    <string name="already_quick_clean">Your device has been boosted</string>
    <string name="antivirus">Antivirus</string>
    <string name="antivirus1">Antivirus</string>
    <string name="antivirus_fix_action">FIX ALL</string>
    <string name="antivirus_fix_tip">The threats have been eliminated</string>
    <string name="antivirus_fix_tip1">The threat has been eliminated</string>
    <string name="antivirus_fix_tip2">Check complete, some operation(s) not completed</string>
    <string name="antivirus_fix_tip3">Check complete, threats remain</string>
    <string name="antivirus_fix_tip4">Check complete, threat remains</string>
    <string name="antivirus_ignore_action">Ignore</string>
    <string name="antivirus_ignore_action_no">No</string>
    <string name="antivirus_ignore_action_yes">Yes</string>
    <string name="antivirus_ignore_content1">Threats still remaining! Are you sure you want to ignore?</string>
    <string name="antivirus_ignore_content2">Will not show again for this version of this app after you ignore.</string>
    <string name="antivirus_ignore_tip">Ignored successfully. Will not show again for this version of this app.</string>
    <string name="antivirus_notification_action">Scan</string>
    <string name="antivirus_notification_content">Last security scan %1$s days ago! Phone\'s in danger!</string>
    <string name="antivirus_notification_content1">Time to scan your device for viruses and other threats.</string>
    <string name="antivirus_notification_content2">APK from unknown source. Run anti-virus?</string>
    <string name="antivirus_notification_content3">Newly installed APK found. Run anti-virus now?</string>
    <string name="antivirus_notification_content4">%1$s not cleared for safety. Anti-virus sweep suggested.</string>
    <string name="antivirus_notification_content5">Click to check if %1$s is secure.</string>
    <string name="antivirus_notification_desc">Tap to run a virus scan now.</string>
    <string name="antivirus_notification_title">Scheduled Scan is Ready</string>
    <string name="antivirus_scan_finish_tag">Found threat:</string>
    <string name="antivirus_tip_1">Check if your phone is safe</string>
    <string name="antivirus_tip_1_1">Scan for viruses and threats</string>
    <string name="antivirus_uninstall_action_no">Not Now</string>
    <string name="antivirus_uninstall_title">Warning</string>
    <string name="app_name">Quickest Phone Booster</string>
    <string name="cpu_cooling_temperature_unit">℃</string>
    <string name="cpu_cooling_temperature_unit1">℉</string>
    <string name="create">CREATE</string>
    <string name="created">CREATED</string>
    <string name="dummy_string"></string>
    <string name="lock_screen_setting_close_lock_screen_choice_no">Not Now</string>
    <string name="lock_screen_setting_close_lock_screen_choice_tip">Device status will not be able to check timely.\nAre you sure to disable?</string>
    <string name="lock_screen_setting_close_lock_screen_choice_yes">Disable</string>
    <string name="notification_ram_with_size">&lt;font color=\"red\"&gt;Too many apps running!&lt;/font&gt; Speed up?</string>
    <string name="notification_ram_with_size_action">Optimize</string>
    <string name="ok">OK</string>
    <string name="setting_lock_screen">Smart Lock</string>
    <string name="setting_notification_toolbar_dialog">Allow Notification Toolbar for more convenient cleaning and shortcuts to volume and brightness</string>
    <string name="share_dialog_no">Cancel</string>
    <string name="share_dialog_title">%1$s of junk cleaned just now! That\'s great! Do you want to share to your friends?</string>
    <string name="share_dialog_yes">Yes</string>
    <string name="temperature_unit">Temperature Unit</string>
</resources>