<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/container" android:background="@color/black30p" android:padding="55dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_white_corner_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="10dp">
        <TextView android:textSize="18sp" android:textColor="@color/gray3" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:padding="@dimen/gap_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/antivirus_uninstall_title" />
        <TextView android:textSize="15sp" android:textColor="@color/gray3" android:paddingLeft="@dimen/gap_big" android:paddingRight="@dimen/gap_big" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/antivirus_ignore_content1" />
        <TextView android:textSize="15sp" android:textColor="@color/gray60p" android:paddingLeft="@dimen/gap_big" android:paddingRight="@dimen/gap_big" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/antivirus_ignore_content2" />
        <LinearLayout android:padding="@dimen/gap_big" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/blue" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/no_confirm" android:background="@drawable/bg_blue_box_corner_3" android:padding="@dimen/gap_small" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gap_big" android:layout_marginRight="@dimen/gap_small" android:text="@string/antivirus_ignore_action_no" android:layout_weight="1.0" />
            <TextView android:textColor="@color/blue" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/yes_confirm" android:background="@drawable/bg_blue_box_corner_3" android:padding="@dimen/gap_small" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="@dimen/gap_small" android:layout_marginRight="@dimen/gap_big" android:text="@string/antivirus_ignore_action_yes" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
