<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="0x106000d" android:layout_width="wrap_content" android:layout_height="wrap_content"
    <RelativeLayout android:background="@drawable/bg_white_corner_10" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="30dp" android:layout_marginRight="8dp">
        <View android:id="@+id/gap" android:background="@drawable/bg_white_top_corner_5" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x6401" />
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/add_qc_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:text="@string/add_qc_dialog_title" android:layout_below="@+id/gap" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16sp" android:textColor="@color/black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_qc_dialog_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12dp" android:text="@string/add_qc_dialog_desc" android:layout_below="@+id/add_qc_dialog_title" android:layout_centerHorizontal="true" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_below="@+id/add_qc_dialog_description">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_qc_dialog_create" android:background="@drawable/bg_blue_real_corner_5" android:paddingTop="8dp" android:paddingBottom="8dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/create" android:layout_alignParentRight="true" />
            <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/blue" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_qc_dialog_created" android:background="@color/white" android:paddingTop="8dp" android:paddingBottom="8dp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/created" android:drawableLeft="@drawable/ic_multi_choose_selected" android:drawablePadding="12dp" android:layout_centerInParent="true" android:drawableStart="@drawable/ic_multi_choose_selected" />
        </RelativeLayout>
        <ImageView android:id="@+id/add_qc_dialog_close" android:layout_width="UNKNOWN_DATA_0x1e01" android:layout_height="UNKNOWN_DATA_0x1e01" android:src="@drawable/ic_close_gray3" android:scaleType="fitXY" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/dummy_string" />
    </RelativeLayout>
    <ImageView android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:contentDescription="@string/dummy_string" />
</RelativeLayout>
