<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="0x106000d" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:padding="@dimen/gap_big" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/gap_big" android:layout_centerInParent="true">
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/content" android:background="@drawable/bg_white_corner_5" android:padding="@dimen/gap_big" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/image">
            <TextView android:textSize="@dimen/feed_back_dialog_desc_text_size" android:textStyle="bold" android:textColor="#646464" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/gap_big" android:text="@string/share_dialog_title" />
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="15sp" android:textColor="#a1a1a1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/no_confirm" android:background="@drawable/bg_gray_corner_2" android:padding="@dimen/gap_normal" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginRight="@dimen/gap_normal" android:text="@string/share_dialog_no" android:layout_weight="1.0" />
                <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/yes_confirm" android:background="@drawable/bg_blue_real_corner_2_1" android:padding="@dimen/gap_normal" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gap_normal" android:text="@string/share_dialog_yes" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@id/image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:contentDescription="@string/dummy_string" />
    </RelativeLayout>
</RelativeLayout>
